[tool.poetry]
name = "nerkor-sync"
version = "0.1.0"
description = ""
authors = ["Gyorgy Orosz <gyorgy@orosz.link>"]
readme = "README.md"
packages = [{include = "nerkor_sync"}]

[tool.poetry.dependencies]
python = "^3.11"
weasel = "^0.1.1"
typer = "~0.7.0"
conllu = "^4.5.3"
spacy = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
